# barista-agent

./: .gitignore  .pre-commit-config.yaml  README.md
UI/: Dockerfile  deploy-ui.sh
UI/src/: ui_main.py
barista-agent-system/: Dockerfile  deploy-agent.sh  pyproject.toml  start.sh
barista-agent-system/agents/barista_agent/: agent.py
barista-agent-system/agents/barista_agent/prompts/: prompts.yaml
barista-agent-system/agents/barista_agent/tools/: availability_check_tools.py  promotions_tools.py
pipeline-data-ingestion-menu/: pyproject.toml
pipeline-data-ingestion-menu/resources/: menu.md
pipeline-data-ingestion-menu/src/: ingestion_menu.py
